# sc309

./: DiabeticNephropathy_snRNAseq_.ipynb  Khun_kidney_allograft_rejection.ipynb  README.md  ScanpyTutorial.ipynb  TryingToPoetry.ipynb  Untitled.ipynb  Untitled1.ipynb  get_poetry.py  goals.txt  peterNotes  poetryTest.ipynb  setup.py
.ipynb_checkpoints/: DiabeticNephropathy_snRNAseq_-checkpoint.ipynb  Khun_kidney_allograft_rejection-checkpoint.ipynb  Khun_kidney_allograft_rejection-checkpoint.ipynb.orig  ScanpyTutorial-checkpoint.ipynb  pyproject-checkpoint.toml
Notebooks/: DiabeticNephropathy_snRNAseq_.ipynb  Khun_kidney_allograft_rejection.ipynb  Noor_kidney_allograft_rejection.ipynb  Notebook_kidney_allograft_rejection.ipynb  ScanpyTutorial.ipynb  Teru_kidney_allograft_rejection.ipynb
Notebooks/.ipynb_checkpoints/: Noor_kidney_allograft_rejection-checkpoint.ipynb  Notebook_kidney_allograft_rejection-checkpoint.ipynb
PoetryTest_package/poetrytest_package.egg-info/: SOURCES.txt  top_level.txt
PoetryTest_package/tests/: test_poetrytest_package.py
pip-wheel-metadata/poetrytest_package-0.1.0.dist-info/: METADATA
poetrytest_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
readmeKhun/: Noor_kidney_allograft_rejection.md
sc309/: scanpy_workflow.py
sc309.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sc309/.ipynb_checkpoints/: filterRegress-checkpoint.py  scanpy_workflow-checkpoint.py  scanpy_workflowNoorCopy-checkpoint.py  (+1 more)
scPrep_package/: pyproject.toml
scPrep_package/tests/: test_scprep_package.py
single_cell_package/: pyproject.toml
(+1 files in other folders)
