[tool.poetry]
name = "scPrep_package"
version = "0.1.0"
description = ""
authors = ["noorkhalil <nokhalil1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
